Criando uma página para navegar entre os exercícios

--- a/poucoDeCSS.html
+++ b/poucoDeCSS.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Um Pouco de CSS</title>
+        <link rel="stylesheet" href="poucoDeCSS.css">
         <style>
             h1{
                 font-size: 20px;
@@ -14,14 +15,6 @@
              font-weight: bold;   
             }
 
-            #textoPrincipal{
-                font-size: 40px;
-                font-weight: bold;
-                color: white;
-                padding: 10px;
-                background-color: #444;
-                margin-bottom: 50px;
-            }
         </style>
     </head>
     <body>
