--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
     <nav>
         <a href wm-nav="exercicios/teste.html">00 - Teste</a> |
         <a href wm-nav="exercicios/texto1.html">01 - Texto 1</a> |
-        <a href wm-nav="exercicios/texto2.html">02 - Texto 2</a>
+        <a href wm-nav="exercicios/texto2.html">02 - Texto 2</a> |
+        <a href wm-nav="exercicios/listas.html">03 - Listas</a> |
+        <a href wm-nav="exercicios/listasAninhadas.html">04 - Listas Aninhadas</a> |
+        <a href wm-nav="exercicios/links1.html">05 - Links</a> |
+        <a href wm-nav="exercicios/tabela.html">06 - Tabelas</a> |
+        <a href wm-nav="exercicios/form/form.html">07 - Formulário</a> |
+        <a href wm-nav="exercicios/imagens.html">08 - Imagens</a>
     </nav>
     <section id="conteudo"></section>
     <footer>
