--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <a href wm-nav="exercicios/links1.html">05 - Links</a> |
         <a href wm-nav="exercicios/tabela.html">06 - Tabelas</a> |
         <a href wm-nav="exercicios/form/form.html">07 - Formulário</a> |
-        <a href wm-nav="exercicios/imagens.html">08 - Imagens</a>
+        <a href wm-nav="exercicios/imagens.html">08 - Imagens</a> |
+        <a href wm-nav="exercicios/video.html">09 - Video</a>
     </nav>
     <section id="conteudo"></section>
     <footer>
